--- a/index.html
+++ b/index.html
@@ -8,37 +8,37 @@
   <body>
     <div id="calculator">
       <div id="display">
-        <p>1 + 22</p>
+        <span id="result">0</span>
       </div>
       <div id="keypad">
         <div class="row">
-          <button class="bg-blue">AC</button>
-          <button class="bg-blue">+/-</button>
-          <button class="bg-blue">%</button>
-          <button class="bg-orange">/</button>
+          <button>AC</button>
+          <button>+/-</button>
+          <button>%</button>
+          <button>/</button>
         </div>
         <div class="row">
-          <button class="bg-green">7</button>
-          <button class="bg-green">8</button>
-          <button class="bg-green">9</button>
-          <button class="bg-orange">*</button>
+          <button>7</button>
+          <button>8</button>
+          <button>9</button>
+          <button>*</button>
         </div>
         <div class="row">
-          <button class="bg-green">4</button>
-          <button class="bg-green">5</button>
-          <button class="bg-green">6</button>
-          <button class="bg-orange">-</button>
+          <button>4</button>
+          <button>5</button>
+          <button>6</button>
+          <button>-</button>
         </div>
         <div class="row">
-          <button class="bg-green">1</button>
-          <button class="bg-green">2</button>
-          <button class="bg-green">3</button>
-          <button class="bg-orange">+</button>
+          <button>1</button>
+          <button>2</button>
+          <button>3</button>
+          <button>+</button>
         </div>
         <div class="row">
-          <button class="bg-green">0</button>
-          <button class="bg-green">.</button>
-          <button class="bg-orange">=</button>
+          <button>0</button>
+          <button>.</button>
+          <button>=</button>
         </div>
       </div>
     </div>
