--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
-    <link href="./style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <div id="calculator">
@@ -42,6 +42,7 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
 
