--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="calculator">
       <div id="display">
-        <span id="result">0</span>
+        <span>0</span>
       </div>
       <div id="keypad">
         <div class="row">
